# xiao-m0-rust-keyboard

./: Cargo.toml  xiao2.cfg
.cargo/: config.toml
src/: hid.rs  key_scanner.rs  keyboard.rs  keys.rs  layout.rs  main.rs
src/keyboard/: hid.rs  hid_manager.rs  key_tracker.rs  layout.rs
src/keyboard/hid_manager/: key_scanner.rs
src/keyboard/hid_manager/key_scanner/: layout.rs
src/keyboard/hid_manager/key_scanner/layout/: keys.rs
src/keyboard/hid_manager/key_scanner/layout/keys/: hid_codes.rs
src/keyboard/layout/: keys.rs
src/keys/: hid_codes.rs
src/layout/: keys.rs
