[package]
authors = ["Brian Weber <weberb@ornl.gov>"]
edition = "2018"
readme = "README.md"
name = "xiao-rust-keyboard"
version = "0.1.0"

[dependencies]
atsamd-hal = "0.14"
xiao_m0 = "0.12.0"
cortex-m = "0.7"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
usb-device = "0.2"
#usbd-hid = "0.6.0"
usbd-hid = {path = "../usbd-hid"}
shared-bus = "0.2.4"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "xiao-rust-keyboard"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
default = ["xiao_m0/usb"]
